--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,1 @@
-<button type="button">Submit</button>
+<button type="button" [ngStyle]="{'background': colour}" (click)="handleClick()">{{text}}</button>
