--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <header>
   <h1>{{title}}</h1>
-  <app-button></app-button>
+  <app-button text="Add Task" colour="teal" (onClick)="addTask()"></app-button>
 </header>
