Added task deletion functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header></app-header>
-<app-button text="Add Task" colour="teal" (onClick)="addTask()"></app-button>
+<app-button text="Add Task" colour="teal" (onClick)="handleAdd()"></app-button>
 <app-tasks></app-tasks>
