--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,1 +1,2 @@
-<app-task-item *ngFor="let task of tasks" [task]="task" (onClick)="handleDelete(task)"></app-task-item>
+<app-task-item *ngFor="let task of tasks" [task]="task" (onClick)="handleDelete(task)" (onToggle)="handleUpdate(task)">
+</app-task-item>
