Added add-task component & implemented two-way binding

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-button text="Add Task" colour="teal" (onClick)="handleAdd()"></app-button>
-<app-tasks></app-tasks>
+<main class="task-manager">
+  <app-header></app-header>
+  <app-tasks></app-tasks>
+</main>
