--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,2 +1,7 @@
-<app-task-item *ngFor="let task of tasks" [task]="task" (onClick)="handleDelete(task)" (onToggle)="handleUpdate(task)">
-</app-task-item>
+<div class="add-task-container">
+  <app-add-task></app-add-task>
+  <app-button text="Add Task" colour="teal" (onClick)="handleAdd()"></app-button>
+  <app-task-item *ngFor="let task of tasks" [task]="task" (onClick)="handleDelete(task)"
+    (onToggle)="handleUpdate(task)">
+  </app-task-item>
+</div>
