--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -1,4 +1,4 @@
-<form class="add-task-form" (ngSubmit)="handleSubmit()">
+<form *ngIf="displayAddForm" class="add-task-form" (ngSubmit)="handleSubmit()">
   <input type="text" name="name" id="name" placeholder="Task Name" [(ngModel)]="name" required>
   <input type="time" name="time" id="time" [(ngModel)]="time" required>
   <button type="submit">Submit</button>
