--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
 <header>
   <h1>{{title}}</h1>
-  <app-button text="Add Task" colour="teal" (onClick)="handleView()"></app-button>
+  <app-button text="{{ displayAddForm ? 'Close' : 'Add' }}" colour="{{ displayAddForm ? 'tomato' : 'teal' }}"
+    (onClick)="handleDisplay()"></app-button>
 </header>
